feat: filter resources by category

--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,7 @@ button:focus-visible {
 #app {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
 @media (prefers-color-scheme: light) {
